[package]
name = "k1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_derive = "1.0"
petgraph = "0.6"
plotters = "0.3"
rand = "0.8.5"